Implemented C++ classes for pump and controller. Need to be integrated into main program

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,7 +22,8 @@
         "ios": "c",
         "regex": "c",
         "locale": "c",
-        "httpd-platform.h": "c"
+        "httpd-platform.h": "c",
+        "*.ipp": "cpp"
     },
     "python.linting.pylintEnabled": false
 }
