Finished implementing JSON for sending data. Fixed memory leak

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,7 +23,9 @@
         "regex": "c",
         "locale": "c",
         "httpd-platform.h": "c",
-        "*.ipp": "cpp"
+        "*.ipp": "cpp",
+        "ostream": "cpp",
+        "rope": "cpp"
     },
     "python.linting.pylintEnabled": false
 }
