--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,7 +26,9 @@
         "*.ipp": "cpp",
         "ostream": "cpp",
         "rope": "cpp",
-        "httpd-freertos.h": "c"
+        "httpd-freertos.h": "c",
+        "condition_variable": "c",
+        "tuple": "c"
     },
     "python.linting.pylintEnabled": false
 }
