--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,10 @@
 [submodule "components/esp32-owb"]
 	path = components/esp32-owb
 	url = https://github.com/DavidAntliff/esp32-owb.git
+[submodule "components/libesphttpd"]
+	path = components/libesphttpd
+	url = https://github.com/chmorgan/libesphttpd.git
+    
+[submodule "components/espfs"]
+	path = components/espfs
+	url = https://github.com/jkent/esp32-espfs.git
