--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 	path = components/libesphttpd
 	url = https://github.com/chmorgan/libesphttpd.git
 
+[submodule "components/espfs"]
+	path = components/espfs
+	url = https://github.com/maxsydney/esp32-espfs.git
