--- a/unitTest/Makefile
+++ b/unitTest/Makefile
@@ -6,12 +6,12 @@ PROJECT_NAME := unit_test_test
 
 # Include the components directory of the main application:
 #
-EXTRA_COMPONENT_DIRS := $(realpath ../components) $IDF_PATH/components
+EXTRA_COMPONENT_DIRS := $(realpath ../components) .
 
 # Set the components to include the tests for.
 # This can be overriden from the command line
 # (e.g. 'make TEST_COMPONENTS=xxxx flash monitor')
 #
-TEST_COMPONENTS ?= testable
+TEST_COMPONENTS ?= main
 
 include $(IDF_PATH)/make/project.mk
