--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 [submodule "components/espfs"]
 	path = components/espfs
 	url = https://github.com/maxsydney/esp32-espfs.git
+[submodule "components/freeRTOScpp"]
+	path = components/freeRTOScpp
+	url = https://github.com/richard-damon/FreeRTOScpp.git
