--- a/.gitmodules
+++ b/.gitmodules
@@ -10,7 +10,7 @@
 
 [submodule "components/espfs"]
 	path = components/espfs
-	url = https://github.com/maxsydney/esp32-espfs.git
+	url = https://github.com/jkent/esp32-espfs.git
 [submodule "components/freeRTOScpp"]
 	path = components/freeRTOScpp
 	url = https://github.com/richard-damon/FreeRTOScpp.git
