--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -87,7 +87,25 @@
         "cfenv": "cpp",
         "typeindex": "cpp",
         "typeinfo": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "__bit_reference": "cpp",
+        "__config": "cpp",
+        "__debug": "cpp",
+        "__errc": "cpp",
+        "__functional_base": "cpp",
+        "__hash_table": "cpp",
+        "__mutex_base": "cpp",
+        "__node_handle": "cpp",
+        "__nullptr": "cpp",
+        "__split_buffer": "cpp",
+        "__string": "cpp",
+        "__threading_support": "cpp",
+        "__tree": "cpp",
+        "__tuple": "cpp",
+        "queue": "cpp",
+        "stack": "cpp",
+        "shared_mutex": "cpp",
+        "span": "cpp"
     },
     "python.linting.pylintEnabled": false,
     "python.pythonPath": "/usr/bin/python3"
