--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,5 +1,19 @@
-idf_component_register(SRCS ./LCD.c ./gpio.c ./input.c ./messages.c ./networking.c ./ota.c ./sensors.c ./webServer.c ./controlLoop.cpp ./controller.cpp ./main.cpp ./pump.cpp)
-                       INCLUDE_DIRS include                       # Edit following two lines to set component requirements (see docs)
-                       REQUIRES )
-                       PRIV_REQUIRES )
-
+idf_component_register(
+    SRCS 
+        ./LCD.c 
+        ./gpio.c 
+        ./input.c 
+        ./messages.cpp
+        ./networking.c 
+        ./ota.c 
+        ./sensors.c 
+        ./webServer.cpp
+        ./controlLoop.cpp 
+        ./controller.cpp 
+        ./main.cpp 
+        ./pump.cpp
+        ./connectionManager.cpp
+        ./thermo.cpp
+    INCLUDE_DIRS ""
+    REQUIRES 
+)
