Almost building. One undefined reference

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,23 @@
-idf_component_register(SRCS ./controller.cpp ./main.cpp ./pump.cpp INCLUDE_DIRS REQUIRES PRIV_REQUIRES )
+idf_component_register(
+    SRCS 
+        ./main.cpp
+        ./connectionManager.cpp
+        ./controller.cpp
+        ./CppTask.cpp
+        ./DistillerManager.cpp
+        ./Filesystem.cpp
+        ./messageServer.cpp
+        ./OneWireBus.cpp
+        ./PBds18b20.cpp
+        ./pump.cpp
+        ./SensorManager.cpp
+        ./thermo.cpp
+        ./webServer.cpp
+        ./WifiManager.cpp
+
+    INCLUDE_DIRS ""
+    REQUIRES
+)
+
+target_compile_options(${COMPONENT_LIB} PRIVATE -std=c++14)
 
