--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,22 +1,15 @@
-idf_component_register(
-    SRCS 
-        ./main.cpp
-        ./connectionManager.cpp
-        ./controller.cpp
-        ./CppTask.cpp
-        ./DistillerManager.cpp
-        ./Filesystem.cpp
-        ./messageServer.cpp
-        ./OneWireBus.cpp
-        ./PBds18b20.cpp
-        ./pump.cpp
-        ./SensorManager.cpp
-        ./thermo.cpp
-        ./webServer.cpp
-        ./WifiManager.cpp
+set(DEPENDENCIES
+    esp32-ds18b20
+    esp32-owb
+    spiffs
+    nvs_flash
+    libesphttpd
+)
 
+idf_component_register(
+    SRC_DIRS .
     INCLUDE_DIRS ""
-    REQUIRES
+    REQUIRES ${DEPENDENCIES}
 )
 
 target_compile_options(${COMPONENT_LIB} PRIVATE -std=c++14)
