--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,11 +2,11 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Build Firmware",
+            "label": "Build Tests",
             "type": "shell",
             "command": "make",
             "options": {
-                "cwd": "${workspaceRoot}"
+                "cwd": "${workspaceRoot}/unitTest"
             },
             // start the build without prompting for task selection, use "group": "build" otherwise
             "group": {
@@ -23,19 +23,6 @@
             "args": [
                 "-j12"
             ],
-            // Use the standard less compilation problem matcher.
-            "problemMatcher": {
-                "owner": "cpp",
-                "fileLocation": ["absolute"],
-                "pattern": {
-                    "regexp": "^(.*):(\\d+):(\\d+):\\s+(warning|error):\\s+(.*)$",
-                    "file": 1,
-                    "line": 2,
-                    "column": 3,
-                    "severity": 4,
-                    "message": 5
-                }
-            }
         },
         {
             "label": "Make Clean",
