Added val checker to Utilities. Added tests for Utilities

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -8,7 +8,7 @@ set(DEPENDENCIES
 )
 
 idf_component_register(
-    SRC_DIRS .
+    SRC_DIRS "."
     INCLUDE_DIRS ""
     REQUIRES ${DEPENDENCIES}
 )
