Added loadFromJSON tests for SensorManagerConfig

--- a/unitTest/main/CMakeLists.txt
+++ b/unitTest/main/CMakeLists.txt
@@ -11,6 +11,7 @@ set(COMPONENT_ADD_INCLUDEDIRS
     "../../components/libesphttpd/include"
     "../../"
     "./test"
+    "./testData"
     "/Users/maxsydney/esp/PissbotV4/components/espfs/include"
 )
 
