--- a/Config/PissbotConfig.json
+++ b/Config/PissbotConfig.json
@@ -14,6 +14,12 @@
                 "GPIO": 22,
                 "PWMChannel": 1,
                 "timerChannel": 1
+            },
+            "slowPMWLPElement": {
+                "PWMFreq": 5
+            },
+            "slowPMWHPElement": {
+                "PWMFreq": 5
             }
         },
         "SensorManagerConfig": {
