Added heartbeat LED

--- a/Config/PissbotConfig.json
+++ b/Config/PissbotConfig.json
@@ -40,6 +40,7 @@
         "WebserverConfig": {
             "maxConnections": 12,
             "maxBroadcastFreq": 10
-        }
+        },
+        "LEDGPIO": 12
     }
 }
