Basic protobuf compiling. Made serialize/deserialze pure virtual methods of MessageBase

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule "components/espfs"]
 	path = components/espfs
 	url = https://github.com/jkent/esp32-espfs.git
+[submodule "components/EmbeddedProto"]
+	path = lib/EmbeddedProto
+	url = https://github.com/Embedded-AMS/EmbeddedProto.git
+[submodule "components/PBProtoBuf"]
+	path = lib/PBProtoBuf
+	url = https://github.com/maxsydney/PBProtoBuf.git
