--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -105,7 +105,12 @@
         "queue": "cpp",
         "stack": "cpp",
         "shared_mutex": "cpp",
-        "span": "cpp"
+        "span": "cpp",
+        "any": "cpp",
+        "coroutine": "cpp",
+        "numbers": "cpp",
+        "semaphore": "cpp",
+        "source_location": "cpp"
     },
     "python.linting.pylintEnabled": false,
     "python.pythonPath": "/usr/bin/python3"
