--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -114,5 +114,6 @@
         "filesystem": "cpp"
     },
     "python.linting.pylintEnabled": false,
-    "python.pythonPath": "/usr/bin/python3"
+    "python.pythonPath": "/usr/bin/python3",
+    "idf.adapterTargetName": "esp32"
 }
